# examples

./: .gitignore
_resource/: 50.pcd
fmt/: CMakeLists.txt  hello_fmt.cpp
fmt/script/: build.bash
imgui/: CMakeLists.txt  demo.cpp  demo_with_triangle_in_background.cpp  demo_with_window_in_background.cpp  four_color_texure.hpp  frame_buffer_object.hpp  rectengle_renderer.hpp  shader_program.hpp  texture_renderer.hpp  triangle_renderer.hpp  vertex_array.hpp
imgui/script/: prepare.bash  test.bash
open3d/: CMakeLists.txt  simple_pointcloud_visualizer.cpp
open3d/resource/: 50.pcd
open3d/script/: build.bash  test.bash
